configurando aplicacao como lib via composer

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "name": "jamal/entity-trait",
+    "version": "0.1",
+
     "autoload": {
         "psr-4": {
             "Jamal\\": "src/Jamal"
